adicao de chave privada e logica da service para usar resource